# funix

./: .gitattributes  .gitignore  .gitmodules  Funix_vs_them.md  LICENSE  MANIFEST.in  README.md  README.zh-CN.md  app.py  decorator.py  functions.py  main.py  pyproject.toml  setup.cfg
.github/: FUNDING.yml
.github/workflows/: build-and-push.yml  build-and-test.yml  run-backend-test.yml
backend/: .gitignore  app.py  decorator.py  functions.py  pyproject.toml
backend/funix/: __init__.py  __main__.py  requirements.txt
backend/funix/app/: __init__.py  websocket.py
backend/funix/config/: __init__.py  switch.py
backend/funix/decorator/: __init__.py  all_of.py  annnotation_analyzer.py  call.py  file.py  hint.py  layout.py  limit.py  lists.py  magic.py  param.py  pre_fill.py  reactive.py  runtime.py  secret.py  theme.py  widget.py
backend/funix/frontend/: __init__.py
backend/funix/hint/: __init__.py  layout.py
backend/funix/jupyter/: __init__.py
backend/funix/prep/: __init__.py  global_to_session.py
backend/funix/session/: __init__.py
backend/funix/test/: magic.py  test_magic.py
backend/funix/theme/: __init__.py
backend/funix/util/: file.py  module.py  network.py  secret.py  text.py  uri.py
backend/funix/widget/: __init__.py  buildin.py  builtin.py
backend/pydatafront/: __init__.py  __main__.py  requirements.txt
backend/pydatafront/app/: __init__.py
backend/pydatafront/decorator/: __init__.py
backend/pydatafront/type/: __init__.py
docs/: api-design.md  release.md
examples/: .funixignore  ai.py  all_widgets_showoff.py  bmi.py  chatGPT_muilti_turn.py  class.py  conditional_simple.py  csv_reader.py  datashow.py  default_and_candidate_values.py  docstring_and_print.py  examples.py  examples_better.py  funix_fun.py  global_test.py  grayit.py  hangman.py  hashit.py  hello_world.py  layout_Github_and_file_card.py  layout_simple.py  lazy_example.py  main.py  more_more_input.py  new_openai_with_session.py  new_type.py  pre_fill.py  print_to_web.py  reactive.py  requirements.txt  run_gcf.py  run_local.py  sessions_manual.py  sessions_simple.py  shipping.py  sine.py  slider_table_plot.py  stream.py  sunset_v2.yaml  table_and_plot.py  (+10 more)
examples/AI/: DallE.py  ai.py  chatGPT.py  chatGPT_advanced.py  chatGPT_lazy.py  chatGPT_muilti_turn.py  huggingface.py  openAI_minimal.py  openAI_minimal_session.py  use_your_own_openAI_token.py
examples/advanced_usage/: conditional_visibility.py  panel_direction.py  per_argument_config.py  pre_fill.py  sessions_simple.py  vectorization.py
examples/archive/: memory.py  text_replacement.py
examples/basic_usage/: bmi.py  conditional_visibility.py  default_and_candidate_values.py  input_widgets.py  layout_simple.py  sessions_manual.py  sessions_simple.py
examples/bioinformatics/: tel_search.py  vector_strip.py
examples/dashboard/: funix_analytics.py
examples/files/: test.txt  words.json
examples/games/: wordle.py
examples/layout/: layout_Github_and_file_card.py  layout_easypost_shipping.py  layout_simple.py
examples/multimedia/: csv_reader.py  grayit.py  hashit.py  rgb2gray.py
examples/small_games/: wordle.py
examples/themes/: better.py  comic_sans.json  dark_test.json  dark_test.py  kanagawa.json  on_the_fly_theme.py  pink.json  sunset.json  sunset.py  theme.py  theme_showroom.py
examples/widgets/: all_widgets_showoff.py  input_widgets.py  output_widgets.py
frontend/: .eslintignore  .eslintrc.js  .gitignore  config-overrides.js  eslint.config.mjs  package.json  tsconfig.json
frontend/public/: config.json  index.html  manifest.json
frontend/src/: App.css  App.tsx  Key.tsx  constants.ts  index.tsx  shared.ts  store.ts
frontend/src/components/: FunixFunctionList.tsx  FunixFunctionSelected.tsx  HistoryDialog.tsx  (+3 more)
pydatafront/: __init__.py  __main__.py
pydatafront/decorator/: __init__.py
(+53 files in other folders)
