[project]
name = "funix"
version = "0.4.7"
authors = [
  {name = "Textea Inc.", email = "bao@textea.co"}
]
license = {file = "LICENSE"}
description = "Building web apps without manually creating widgets"
readme = "README.md"
requires-python = ">=3.10"
classifiers = [
  "Development Status :: 4 - Beta",
  "License :: OSI Approved :: MIT License",
  "Programming Language :: Python :: 3.10",
  "Programming Language :: Python :: 3.11",
  "Operating System :: OS Independent",
  "Framework :: Flask",
  "Framework :: Matplotlib"
]
dependencies = [
  "flask>=2.2.2",
  "flask_cors>=3.0.10",
  "functions-framework==3.*",
  "requests>=2.28.1",
  "plac>=1.3.5"
]

[project.optional-dependencies]
plot = [
  "matplotlib>=3.4.3",
  "mpld3>=0.5.8",
]
git = [
  "GitPython>=3.1.31",
]
all = [
  "matplotlib>=3.4.3",
  "mpld3>=0.5.8",
  "GitPython>=3.1.31",
]

[project.urls]
homepage = "https://github.com/TexteaInc/funix"

[project.scripts]
funix = "funix.__main__:cli_main"

[tool.setuptools.packages.find]
where = ["backend"]
