[project]
name = "funix"
version = "0.6.1"
authors = [
  {name = "Textea Inc.", email = "forrestbao@gmail.com"}
]
license = {file = "LICENSE"}
description = "Building web apps without manually creating widgets"
readme = "README.md"
requires-python = ">=3.10"
classifiers = [
  "Development Status :: 4 - Beta",
  "License :: OSI Approved :: MIT License",
  "Programming Language :: Python :: 3.10",
  "Programming Language :: Python :: 3.11",
  "Operating System :: OS Independent",
  "Framework :: Flask",
  "Framework :: Matplotlib"
]
dependencies = [
  "flask>=2.2.2",
  "functions-framework==3.*",
  "requests>=2.28.1",
  "plac>=1.3.5",
  "gitignore-parser>=0.1.9",
  "flask-sock>=0.7.0",
  "SQLAlchemy>=2.0.23",
  "matplotlib>=3.4.3",
  "mpld3>=0.5.8",
  "pandas>=2.0.3",
  "docstring_parser>=0.16",
]

[project.optional-dependencies]
pendera = [
  "pandera>=0.17.2",
]
git = [
  "GitPython>=3.1.31",
]
ipython = [
  "IPython>=8.14.0",
  "ipywidgets>=8.0.7",
]
all = [
  "GitPython>=3.1.31",
  "IPython>=8.14.0",
  "ipywidgets>=8.0.7",
  "pandera>=0.17.2",
]

[project.urls]
homepage = "https://github.com/TexteaInc/funix"

[project.scripts]
funix = "funix.__main__:cli_main"

[tool.pyright]
include = ["src"]
exclude = ["**/node_modules", "**/__pycache__"]
strict = ["src"]
typeCheckingMode = "strict"

useLibraryCodeForTypes = true
reportMissingImports = true
reportMissingTypeStubs = false

[tool.setuptools.packages.find]
where = ["backend"]
